zr_vm_rust_binding/include/zr_vm_rust_binding.h

typedef enum EZrRustBindingStatus {
    ZR_RUST_BINDING_STATUS_OK = 0,
    ZR_RUST_BINDING_STATUS_INVALID_ARGUMENT = 1,
    ZR_RUST_BINDING_STATUS_IO_ERROR = 2,
    ZR_RUST_BINDING_STATUS_NOT_FOUND = 3,
    ZR_RUST_BINDING_STATUS_ALREADY_EXISTS = 4,
    ZR_RUST_BINDING_STATUS_BUFFER_TOO_SMALL = 5,
    ZR_RUST_BINDING_STATUS_COMPILE_ERROR = 6,
    ZR_RUST_BINDING_STATUS_RUNTIME_ERROR = 7,
    ZR_RUST_BINDING_STATUS_UNSUPPORTED = 8,
    ZR_RUST_BINDING_STATUS_INTERNAL_ERROR = 9
} ZrRustBindingStatus;
typedef enum EZrRustBindingExecutionMode {
    ZR_RUST_BINDING_EXECUTION_MODE_INTERP = 0,
    ZR_RUST_BINDING_EXECUTION_MODE_BINARY = 1
} ZrRustBindingExecutionMode;
typedef enum EZrRustBindingValueKind {
    ZR_RUST_BINDING_VALUE_KIND_NULL = 0,
    ZR_RUST_BINDING_VALUE_KIND_BOOL = 1,
    ZR_RUST_BINDING_VALUE_KIND_INT = 2,
    ZR_RUST_BINDING_VALUE_KIND_FLOAT = 3,
    ZR_RUST_BINDING_VALUE_KIND_STRING = 4,
    ZR_RUST_BINDING_VALUE_KIND_ARRAY = 5,
    ZR_RUST_BINDING_VALUE_KIND_OBJECT = 6,
    ZR_RUST_BINDING_VALUE_KIND_FUNCTION = 7,
    ZR_RUST_BINDING_VALUE_KIND_NATIVE_POINTER = 8,
    ZR_RUST_BINDING_VALUE_KIND_UNKNOWN = 255
} ZrRustBindingValueKind;
typedef enum EZrRustBindingOwnershipKind {
    ZR_RUST_BINDING_OWNERSHIP_KIND_NONE = 0,
    ZR_RUST_BINDING_OWNERSHIP_KIND_UNIQUE = 1,
    ZR_RUST_BINDING_OWNERSHIP_KIND_SHARED = 2,
    ZR_RUST_BINDING_OWNERSHIP_KIND_WEAK = 3,
    ZR_RUST_BINDING_OWNERSHIP_KIND_BORROWED = 4,
    ZR_RUST_BINDING_OWNERSHIP_KIND_LOANED = 5
} ZrRustBindingOwnershipKind;
typedef struct ZrRustBindingErrorInfo {
    ZrRustBindingStatus status;
    TZrChar message[ZR_RUST_BINDING_ERROR_MESSAGE_CAPACITY];
} ZrRustBindingErrorInfo;
typedef struct ZrRustBindingRuntimeOptions {
    TZrUInt64 heapLimitBytes;
    TZrUInt64 pauseBudgetUs;
    TZrUInt64 remarkBudgetUs;
    TZrUInt32 workerCount;
} ZrRustBindingRuntimeOptions;
typedef struct ZrRustBindingScaffoldOptions {
    const TZrChar *rootPath;
    const TZrChar *projectName;
    TZrBool overwriteExisting;
} ZrRustBindingScaffoldOptions;
typedef struct ZrRustBindingCompileOptions {
    TZrBool emitIntermediate;
    TZrBool incremental;
} ZrRustBindingCompileOptions;
typedef struct ZrRustBindingRunOptions {
    ZrRustBindingExecutionMode executionMode;
    const TZrChar *moduleName;
    const TZrChar *const *programArgs;
    TZrSize programArgCount;
} ZrRustBindingRunOptions;
typedef struct ZrRustBindingRuntime ZrRustBindingRuntime;
typedef struct ZrRustBindingProjectWorkspace ZrRustBindingProjectWorkspace;
typedef struct ZrRustBindingCompileResult ZrRustBindingCompileResult;
typedef struct ZrRustBindingManifestSnapshot ZrRustBindingManifestSnapshot;
typedef struct ZrRustBindingValue ZrRustBindingValue;
ZR_RUST_BINDING_API void ZrRustBinding_GetLastErrorInfo(ZrRustBindingErrorInfo *outErrorInfo);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Runtime_NewBare(const ZrRustBindingRuntimeOptions *options,
                                                                      ZrRustBindingRuntime **outRuntime);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Runtime_NewStandard(const ZrRustBindingRuntimeOptions *options,
                                                                          ZrRustBindingRuntime **outRuntime);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Runtime_Free(ZrRustBindingRuntime *runtime);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Project_Scaffold(
        const ZrRustBindingScaffoldOptions *options,
        ZrRustBindingProjectWorkspace **outWorkspace);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Project_Open(const TZrChar *projectPath,
                                                                   ZrRustBindingProjectWorkspace **outWorkspace);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ProjectWorkspace_Free(ZrRustBindingProjectWorkspace *workspace);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ProjectWorkspace_GetProjectPath(
        const ZrRustBindingProjectWorkspace *workspace,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ProjectWorkspace_GetProjectRoot(
        const ZrRustBindingProjectWorkspace *workspace,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ProjectWorkspace_GetManifestPath(
        const ZrRustBindingProjectWorkspace *workspace,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ProjectWorkspace_GetEntryModule(
        const ZrRustBindingProjectWorkspace *workspace,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ProjectWorkspace_ResolveArtifacts(
        const ZrRustBindingProjectWorkspace *workspace,
        const TZrChar *moduleName,
        TZrChar *zroBuffer,
        TZrSize zroBufferSize,
        TZrChar *zriBuffer,
        TZrSize zriBufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ProjectWorkspace_LoadManifest(
        const ZrRustBindingProjectWorkspace *workspace,
        ZrRustBindingManifestSnapshot **outManifestSnapshot);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_GetVersion(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        TZrUInt32 *outVersion);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_GetEntryCount(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        TZrSize *outEntryCount);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_FindEntry(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        const TZrChar *moduleName,
        TZrSize *outEntryIndex);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_GetEntryModuleName(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        TZrSize entryIndex,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_GetEntrySourceHash(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        TZrSize entryIndex,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_GetEntryZroHash(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        TZrSize entryIndex,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_GetEntryZroPath(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        TZrSize entryIndex,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_GetEntryZriPath(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        TZrSize entryIndex,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_GetEntryImportCount(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        TZrSize entryIndex,
        TZrSize *outImportCount);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_GetEntryImport(
        const ZrRustBindingManifestSnapshot *manifestSnapshot,
        TZrSize entryIndex,
        TZrSize importIndex,
        TZrChar *buffer,
        TZrSize bufferSize);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_ManifestSnapshot_Free(
        ZrRustBindingManifestSnapshot *manifestSnapshot);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Project_Compile(
        ZrRustBindingRuntime *runtime,
        const ZrRustBindingProjectWorkspace *workspace,
        const ZrRustBindingCompileOptions *options,
        ZrRustBindingCompileResult **outCompileResult);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_CompileResult_GetCounts(
        const ZrRustBindingCompileResult *compileResult,
        TZrSize *outCompiledCount,
        TZrSize *outSkippedCount,
        TZrSize *outRemovedCount);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_CompileResult_Free(ZrRustBindingCompileResult *compileResult);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Project_Run(
        ZrRustBindingRuntime *runtime,
        const ZrRustBindingProjectWorkspace *workspace,
        const ZrRustBindingRunOptions *options,
        ZrRustBindingValue **outResult);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Project_CallModuleExport(
        ZrRustBindingRuntime *runtime,
        const ZrRustBindingProjectWorkspace *workspace,
        const ZrRustBindingRunOptions *options,
        const TZrChar *moduleName,
        const TZrChar *exportName,
        ZrRustBindingValue *const *arguments,
        TZrSize argumentCount,
        ZrRustBindingValue **outResult);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_NewNull(ZrRustBindingValue **outValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_NewBool(TZrBool boolValue, ZrRustBindingValue **outValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_NewInt(TZrInt64 intValue, ZrRustBindingValue **outValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_NewFloat(TZrFloat64 floatValue,
                                                                     ZrRustBindingValue **outValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_NewString(const TZrChar *stringValue,
                                                                      ZrRustBindingValue **outValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_NewArray(ZrRustBindingValue **outValue);
ZR_RUST_BINDING_API ZrRustBindingStatus ZrRustBinding_Value_NewObject(ZrRustBindingValue **outValue);